mail/static/mail/styles.css
/* general styles*/
:root {
    --color2: #c3dded;
}

textarea {
    min-height: 400px;
}

html {
    height: 100%;
    width: 100vw;
}

body {
    /*background-image: url('./joanna-kosinska-uGcDWKN91Fs-unsplash.jpg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size:cover;*/
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: var(--color2);
}

.container {
    height: 100%;
    width: 100vw !important;
    padding: 0% !important;
    position: absolute;
    top: 0;
    left: 0;
}

.center-content {
    justify-content: center;
    align-items: center;
    text-align: center;
    justify-items: center;
}

.margin-top {
    margin-top: 5%;
}

.margin-top-big {
    margin-top: 25vh;
}
.margin-top-small {
    margin-top: 2%;
}

.margin-bottom {
    margin-bottom: 5%;
}

.margin-bottom-small {
    margin-bottom: 2%;
}

.padding-top {
    padding-top: 5%;
}

.padding-top-small {
    padding-top: 2%;
}

.padding-bottom {
    padding-bottom: 5%;
}

.padding-bottom-small {
    padding-bottom: 2%;
}

.blur {
    background: var(--color2);
    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
    backdrop-filter: blur( 4px );
    -webkit-backdrop-filter: blur( 4px );
}

.input-field:hover {
    border: solid 3px rgb(109, 200, 253);    
}

.button:hover, .my-button:hover {
    transform: scale(1.1);
    -webkit-transform:scale(1.1);
}

.my-button {
    width: 90% !important;
    margin-left: 5% !important;
}

.error-message {
    color: red;
}

.column-1 {
    grid-column: 1;
}

.column-2 {
    grid-column: 2;
}

.column-3 {
    grid-column: 3;
}

.row-1 {
    grid-row: 1;
}

.row-2 {
    grid-row: 2;
}

.color2 {
    color: var(--color2);
}

.title {
    color: blue;
    margin-left: 2px;
    width: min-content;
}

.title-front {
    color: blue;
    text-align: center;
}

@media only screen and (max-width: 820px) {
    .title-front {
        margin-left: 0%;
        margin-top: 25vh;
    }
    .login-page-container, .register-page-container {
        margin-left: 0%;
    }
    .login-reg-all-page-container {
        text-align: center;
        align-items: center;
    }

}

@media only screen and (min-width: 820px) {
    .title-front {
        margin-left: 15%;
        margin-top: 25vh;
    }
    .login-page-container, .register-page-container {
        margin-left: 10vw;
        margin-top: 10vh;
    }
}

/* flexbox stlyes */
.flex-item-small {
    /*flex-grow: 1;*/
    height: min-content;
    width: 60px !important;
}

.flex-item {
    flex-grow: 1;
    height: min-content;
    width: 300px !important;
}

.flex-item-expand {
    flex-basis: 100%;
    height: min-content;
}

.flex-layout {
    display: flex;
    flex-flow: row wrap;
}

/* login-register-pages styles*/

.login-reg-all-page-container {
    width: 98vw;
    height: inherit;
}

.login-page-container, .register-page-container {
    display: grid;
    grid-template-rows: min-content min-content;
    grid-template-columns: 100%;
    width: 300px;
    height: 400px;
    color: white;
    border-radius: 7px;
}

.register-choice, .login-choice {
    margin-top: 5%;
}

.register-form, .login-form {
    width: 90% !important;
    margin-left: 5% !important;
    margin-right: 5% !important;
}

/* inbox-page styles */

@keyframes popup-show {
    from {
        opacity: 0%;
    }
    to {
        opacity: 100%;
    }
}


.inbox-all-page-container {
    display: grid;
    width: 100vw;
    min-width: 400px;
    grid-template-rows: min-content auto;
    grid-template-columns: 100%;
    height: 100%;
}

.inbox-page-container {
    min-height: min-content;
    height: inherit;
    width: 100vw;
    display: grid;
    grid-template-columns: 110px auto;
    column-gap: 0px;
    grid-template-rows: 100%;
}

.nav-header {
    /*background-color: white;
    border-bottom: 0.5px solid grey;*/
    height: min-content;
    min-width: 300px;
    display: grid;
    grid-template-columns: 150px auto 50px 50px;
    grid-template-rows: min-content;
    column-gap: 2px;
}

.my-navbar {
    width: 100%;
    line-height: 300%;
    /*background-color: rgb(186, 221, 248);*/
    /*background-color: white;*/
    padding-left: 1%;
    padding-right: 15px;
}

.inbox-main-page-container {
    border-left: 0.5px solid grey;
    padding-left: 3%;
}

.my-nav-link {
    max-height: min-content;
    width: 100% !important;
    margin-left: 2%;
}

.my-nav-link:hover {
    text-decoration: none;
    background-color: var(--color2);
    border-radius: 7px;
}

#inbox {
    padding-right: 15px;
}

#sent {
    padding-right: 15px;
}

#archived {
    padding-right: 0px;
}

.log-out-div {
    margin-top:10px;
}

.icon {
    height: 20px;
    width: 20px;
}

.icon-small {
    height: 15px;
    width: 14px;
}

.icon-big {
    height: 25px;
    width: 25px;
}

#emails-container {
    display: grid;
    width: 90%;
    overflow-x: hidden;
    overflow-y: scroll;
    max-height: 60vh;
}

.email-line {
    /*color: black;*/
    border-bottom: 1px solid grey;
    border-radius: 5px;
    display: grid;
    grid-template-rows: 100%;
    grid-template-columns: 40% 40% 20%;
    min-width: 400px;
    padding-left: 3px;
}

.email-line-unread {
    font-weight: bold;
    /*background-color: rgb(218, 244, 247);*/
}

.email-line:hover {
    background-color: rgb(168, 186, 189);
    cursor: pointer;
}

.email-popup {
    /*height: 70vh;*/
    min-height: min-content;
    width: 70vw;
    min-width: 200px;
    position: absolute;
    padding: 2%;
    top: 15vh;
    left: 15vw;
    border: 1px solid gray;
    border-radius: 10px;
    background-color: white;
    animation:
        popup-show 1s;
}

/* compose-email styling */

#compose {
    padding-right: 0px !important;
}

#compose-view {
    width: 90%;    
}

#compose-body {
    height: 200px;
    min-height: 250px !important;
    max-height: 250px !important;
}

.body-pop {
    height: 60%;
    overflow-x: scroll;
    overflow-y: scroll;
    padding: 5% 0%;
}

.button-small-flex {
    /*flex-grow: 1;*/
    height: min-content;
    width: 200px !important;
    margin: 2%;
}

/* dark mode switch 

switch styling code from:
https://codepen.io/chriscoyier/pen/JjozJLv */

.switch {
    position: relative;
    display: inline-block;
    width: 40px;
    height: 30px;
    margin-top: 10px;
}
.switch-input {
    display: none;
}
.switch-label {
    display: block;
    width: 100%;
    height: 80%;
    text-indent: -150%;
    clip: rect(0 0 0 0);
    color: black;
    user-select: none;
}
.switch-label::before,
.switch-label::after {
    content: "";
    display: block;
    position: absolute;
    cursor: pointer;
}
.switch-label::before {
    width: 100%;
    height: 80%;
    background-color: #dedede;
    border-radius: 9999em;
    -webkit-transition: background-color 0.25s ease;
    transition: background-color 0.25s ease;
}
.switch-label::after {
    top: 0;
    left: 0;
    width: 40%;
    height: 80%;
    border-radius: 50%;
    background-color: #fff;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.45);
    -webkit-transition: left 0.5s ease;
    transition: left 0.5s ease;
}
.switch-input:checked + .switch-label::before {
    background-color: #89c12d;
}
.switch-input:checked + .switch-label::after {
    left: 60%;
}

